--- a/custom/rent/views/rental_stock_view.xml
+++ b/custom/rent/views/rental_stock_view.xml
@@ -10,6 +10,7 @@
                     <field name="reserved_qty"/>
                     <field name="rented_qty"/>
                     <field name="returned_qty"/>
+                    <field name="return_date"/>
                 </tree>
             </field>
         </record>
